README, tag fix